k8s-manifests/jimswiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jimswiki
  namespace: jimswiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: jimswiki-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: jimswiki.nerdsbythehour.com
    http:
      paths:
      - backend:
          service:
            name: jimswiki
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jimswiki.nerdsbythehour.com
    secretName: jimswiki-tls
