k8s-manifests/teslamate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  namespace: teslamate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: teslamate-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: teslamate.nerdsbythehour.com
    http:
      paths:
      - backend:
          service:
            name: teslamate
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - teslamate.nerdsbythehour.com
    secretName: teslamate-tls
